// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExerciseForm Rendering Tests No data 1`] = `
<div
  className="container-md"
>
  <form
    className=""
    id="addExerciseForm"
    onSubmit={[Function]}
  >
    <div
      className="mb-3 input-group"
    >
      <span
        className="input-group-text"
      >
        Name
      </span>
      <input
        aria-label="name"
        className="form-control"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="mb-3 input-group"
    >
      <span
        className="input-group-text"
      >
        Muscle Group
      </span>
      <input
        aria-label="muscleGroup"
        className="form-control"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="mb-3 input-group"
    >
      <span
        className="input-group-text"
      >
        Notes
      </span>
      <textarea
        aria-label="exerciseNotes"
        className="form-control"
        onChange={[Function]}
        rows={3}
        value=""
      />
    </div>
  </form>
  <div
    className="container"
  >
    <form
      className=""
      onSubmit={[Function]}
    >
      <div
        className="d-flex align-items-center mb-3 input-group"
      >
        <span
          className="input-group-text"
        >
          Reps
        </span>
        <input
          aria-label="reps"
          className="form-control"
          onChange={[Function]}
          type="text"
          value=""
        />
        <span
          className="input-group-text"
        >
          Weight
        </span>
        <input
          aria-label="weight"
          className="form-control"
          onChange={[Function]}
          type="text"
          value=""
        />
        <button
          aria-label="setSubmit"
          className="btn btn-outline-secondary"
          disabled={false}
          type="submit"
        >
          Add Set
        </button>
      </div>
    </form>
  </div>
  <button
    aria-label="exerciseSubmit"
    className="mt-4 btn btn-outline-secondary"
    disabled={false}
    form="addExerciseForm"
    type="submit"
  >
    Add Exercise
  </button>
</div>
`;

exports[`ExerciseForm Rendering Tests With Data 1`] = `
<div
  className="container-md"
>
  <form
    className=""
    id="addExerciseForm"
    onSubmit={[Function]}
  >
    <div
      className="mb-3 input-group"
    >
      <span
        className="input-group-text"
      >
        Name
      </span>
      <input
        aria-label="name"
        className="form-control"
        onChange={[Function]}
        type="text"
        value="Lunges"
      />
    </div>
    <div
      className="mb-3 input-group"
    >
      <span
        className="input-group-text"
      >
        Muscle Group
      </span>
      <input
        aria-label="muscleGroup"
        className="form-control"
        onChange={[Function]}
        type="text"
        value="Legs"
      />
    </div>
    <div
      className="mb-3 input-group"
    >
      <span
        className="input-group-text"
      >
        Notes
      </span>
      <textarea
        aria-label="exerciseNotes"
        className="form-control"
        onChange={[Function]}
        rows={3}
        value="Dumbbells"
      />
    </div>
  </form>
  <div
    className="container"
  >
    <form
      className=""
      onSubmit={[Function]}
    >
      <div
        className="d-flex align-items-center mb-3 input-group"
      >
        <span
          className="input-group-text"
        >
          Reps
        </span>
        <input
          aria-label="reps"
          className="form-control"
          onChange={[Function]}
          type="text"
          value=""
        />
        <span
          className="input-group-text"
        >
          Weight
        </span>
        <input
          aria-label="weight"
          className="form-control"
          onChange={[Function]}
          type="text"
          value=""
        />
        <button
          aria-label="setSubmit"
          className="btn btn-outline-secondary"
          disabled={false}
          type="submit"
        >
          Add Set
        </button>
      </div>
    </form>
  </div>
  <div
    className="pt-3 container"
    style={
      Object {
        "margin": "auto",
        "textAlign": "center",
        "width": "60%",
      }
    }
  >
    <div
      style={
        Object {
          "textAlign": "left",
        }
      }
    >
      Set List
    </div>
    <table
      className="table table-sm table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Reps
          </th>
          <th>
            Weight
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          onClick={[Function]}
        >
          <td>
            40
          </td>
          <td>
            100
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td>
            40
          </td>
          <td>
            100
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td>
            40
          </td>
          <td>
            100
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td>
            40
          </td>
          <td>
            100
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    aria-label="exerciseSubmit"
    className="mt-4 btn btn-outline-secondary"
    disabled={false}
    form="addExerciseForm"
    type="submit"
  >
    Add Exercise
  </button>
</div>
`;
